src/objects/AsteriskClickToDailCS__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ErrorHandlerToEmail__c</fullName>
        <label>Error Handler To Email Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PbxURL__c</fullName>
        <label>Pbx URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>api_key__c</fullName>
        <label>api key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>context__c</fullName>
        <label>context</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>timeout__c</fullName>
        <label>timeout</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>Click to Dial Asterisk Settings</label>
</CustomObject>